update compat for 1.10 support

--- a/Project.toml
+++ b/Project.toml
@@ -23,8 +23,8 @@ MLJBase = "1.8.1"
 MLUtils = "0.4.8"
 OneHotArrays = "0.2.10"
 Optimisers = "0.4.6"
-Printf = "1.11.0"
-Random = "1.11.0"
+Printf = "1.11.0, 1.10"
+Random = "1.11.0, 1.10"
 Zygote = "0.7.10"
 julia = "1"
 
