--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "RieszLearning"
 uuid = "a0bf4b8b-e406-4596-8317-f128bc1688be"
 authors = ["Olivier Labayle <olabayle@gmail.com> and contributors"]
-version = "0.0.0-DEV"
+version = "0.0.1"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
